# assignment1-basics

./: pyproject.toml
cs336_basics/: pretokenization_example.py
cs336_basics/bpe/: bpe_index.py  merges.txt  pre_tokenize.py  tokenizer.py  train_bpe_tinystories.py  utils.py  vocab.json
cs336_basics/bpe/bpeindex_cpp/: CMakeLists.txt  bpeindex.cpp  bpeindex.h  bpeindex_pybind.cpp
cs336_basics/dataset/: utils.py
cs336_basics/layer/: attention.py  embedding.py  linear.py  norm.py  rope.py  swiglu.py  transformer.py
cs336_basics/loss_optimizer/: loss.py  loss_opt.py
tests/: adapters.py
